Hide overflow of <body> to prevent scroll bars from showing up

--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ body {
     top: 0px;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
 }
 
 * {
